Revert "Fixed Task Manager Iframe alignment, URL, and added a loader"
This reverts commit a2df679ec03f95f7f610f26d2c17888755af07fb.

--- a/frontend/src/containers/TaskManagement/taskmanager.scss
+++ b/frontend/src/containers/TaskManagement/taskmanager.scss
@@ -1,14 +1,15 @@
+.container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%;
+}
 .responsive-iframe {
   position: absolute;
-  top: 10%;
-  left: 15%;
+  top: 0;
+  left: 0;
   bottom: 0;
   right: 0;
-  width: 80%;
+  width: 100%;
   height: 100%;
-}
-.preload {
-  position: absolute;
-  top: 50%;
-  left: 50%;
 }
